added links and photos and straightened out About

--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
-    <title>Luke Kelley - Index</title>
+    <title>Luke Kelley - About</title>
     <meta content="" name="description" />
     <meta content="" name="keywords" />
 
@@ -105,15 +105,8 @@
                   <ul>
                     <li>
                       <i class="bi bi-rounded-right"></i>
-                      <strong>Birthday:</strong> Thanksgiving Day, 1982
-                    </li>
-                    <li>
-                      <i class="bi bi-rounded-right"></i>
-                      <strong>Website:</strong> www.lucasjkelley.com
-                    </li>
-                    <li>
-                      <i class="bi bi-rounded-right"></i>
-                      <strong>Phone:</strong> +1 913 269 6128
+                      <strong>Website:</strong>
+                      <a href="www.lucasjkelley.com">www.lucasjkelley.com</a>
                     </li>
                     <li>
                       <i class="bi bi-rounded-right"></i>
@@ -125,19 +118,17 @@
                   <ul>
                     <li>
                       <i class="bi bi-rounded-right"></i>
-                      <strong>Age:</strong> 40
+                      <strong>LinkedIn:</strong>
+                      <a href="https://www.linkedin.com/in/lucasjkelley/"
+                        >/lucasjkelley</a
+                      >
                     </li>
                     <li>
                       <i class="bi bi-rounded-right"></i>
-                      <strong>Degree:</strong> Master
-                    </li>
-                    <li>
-                      <i class="bi bi-rounded-right"></i>
-                      <strong>Email:</strong> lucas.j.kelley@gmail.com
-                    </li>
-                    <li>
-                      <i class="bi bi-rounded-right"></i>
-                      <strong>Freelance:</strong> Available
+                      <strong>Email:</strong>
+                      <a href="mailto:lucas.j.kelley@gmail.com"
+                        >lucas.j.kelley@gmail.com</a
+                      >
                     </li>
                   </ul>
                 </div>
@@ -176,7 +167,7 @@
       <!-- ======= Skills Section ======= -->
       <section id="skills" class="skills">
         <div class="container" data-aos="fade-up">
-          <div class="section-title">
+          <div class="section-title text-center">
             <h2>Skills</h2>
             <p>
               I specialize in a variety of technologies and bring a lot to the
@@ -185,7 +176,7 @@
             </p>
           </div>
 
-          <div class="row justify-content-center pt-5">
+          <div class="row pt-5">
             <div class="col-md-6 row-item col-lg-4">
               <div class="card-img pb-3 align-left">
                 <i class="bi bi-braces-asterisk" media-simple="true"></i>
@@ -199,9 +190,7 @@
                 jQuery, jQueryUI, CSS3, and Bootstrap
               </p>
             </div>
-          </div>
 
-          <div class="row justify-content-center pt-5">
             <div class="col-md-6 row-item col-lg-4">
               <div class="card-img pb-3 align-left">
                 <i class="bi bi-braces-asterisk" media-simple="true"></i>
@@ -215,9 +204,7 @@
                 jQuery, jQueryUI, CSS3, and Bootstrap
               </p>
             </div>
-          </div>
 
-          <div class="row justify-content-center pt-5">
             <div class="col-md-6 row-item col-lg-4">
               <div class="card-img pb-3 align-left">
                 <i class="bi bi-braces-asterisk" media-simple="true"></i>
@@ -234,7 +221,7 @@
           </div>
         </div>
       </section>
-      <!-- ======= Facts Section ======= -->
+      <!-- ======= Facts Section ======= 
       <section id="facts" class="facts">
         <div class="container" data-aos="fade-up">
           <div class="section-title">
@@ -293,7 +280,7 @@
       -->
       <!-- End Facts Section -->
 
-      <!-- ======= Testimonials Section ======= -->
+      <!-- ======= Testimonials Section ======= 
       <section id="testimonials" class="testimonials">
         <div class="container" data-aos="fade-up">
           <div class="section-title">
@@ -331,7 +318,7 @@
                   </p>
                 </div>
               </div>
-              <!-- End testimonial item -->
+              <!-- End testimonial item 
 
               <div class="swiper-slide">
                 <div class="testimonial-item">
@@ -352,7 +339,7 @@
                   </p>
                 </div>
               </div>
-              <!-- End testimonial item -->
+              <!-- End testimonial item 
 
               <div class="swiper-slide">
                 <div class="testimonial-item">
@@ -372,7 +359,7 @@
                   </p>
                 </div>
               </div>
-              <!-- End testimonial item -->
+              <!-- End testimonial item 
 
               <div class="swiper-slide">
                 <div class="testimonial-item">
@@ -393,7 +380,7 @@
                   </p>
                 </div>
               </div>
-              <!-- End testimonial item -->
+              <!-- End testimonial item 
 
               <div class="swiper-slide">
                 <div class="testimonial-item">
@@ -414,13 +401,13 @@
                   </p>
                 </div>
               </div>
-              <!-- End testimonial item -->
+              <!-- End testimonial item 
             </div>
             <div class="swiper-pagination"></div>
           </div>
         </div>
       </section>
-      <!-- End Testimonials Section -->
+       End Testimonials Section -->
     </main>
     <!-- End #main -->
 
