--- a/portfolio.html
+++ b/portfolio.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Luke Kelley - Index</title>
+  <title>Luke Kelley - Portfolio</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
