finished up links and added resume d/l

--- a/about.html
+++ b/about.html
@@ -9,8 +9,11 @@
     <meta content="" name="keywords" />
 
     <!-- Favicons -->
-    <link href="assets/img/favicon.png" rel="icon" />
-    <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon" />
+    <link href="assets/img/Icons/LK_BrandingSuite-03.png" rel="icon" />
+    <link
+      href="assets/img/Icons/LK_BrandingSuite-03.png"
+      rel="apple-touch-icon"
+    />
 
     <!-- Google Fonts -->
     <link
@@ -72,10 +75,13 @@
         <!-- .navbar -->
 
         <div class="header-social-links">
-          <a href="#" class="twitter"><i class="bi bi-house-fill"></i></a>
-          <a href="#" class="facebook"><i class="bi bi-lamp"></i></a>
-          <a href="#" class="instagram"><i class="bi bi-tencent-qq"></i></a>
-          <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+          <a href="https://www.lucasjkelley.com" class="website"
+            ><i class="bi bi-house-fill"></i
+          ></a>
+          <a href="#" class="github"><i class="bi bi-github"></i></a>
+          <a href="https://www.linkedin.com/in/lucasjkelley/" class="linkedin"
+            ><i class="bi bi-linkedin"></i
+          ></a>
         </div>
       </div>
     </header>
@@ -152,11 +158,11 @@
                 processes and programs that helped dive deeper into what was
                 happening and give insight on how to better move forward. This
                 was mostly utilizing Excel & Access and I had always felt
-                limited. I knew there was more to learn, and I wanted to do it
-                professionally and full time. So I decided to conquer Centriq
-                Training's Full-Stack Developer Program and start there. The
-                sky's the limit as I continue to learn new skills at every
-                opportunity.
+                limited with only those tools. I knew there was more to learn,
+                and I wanted to do it professionally and full time. So I decided
+                to conquer Centriq Training's Full-Stack Developer Program and
+                start there. The sky's the limit as I continue to learn new
+                skills at every opportunity.
               </p>
             </div>
           </div>
@@ -179,43 +185,41 @@
           <div class="row pt-5">
             <div class="col-md-6 row-item col-lg-4">
               <div class="card-img pb-3 align-left">
-                <i class="bi bi-braces-asterisk" media-simple="true"></i>
+                <i class="bi bi-phone-landscape" media-simple="true"></i>
               </div>
               <h4 class="custom-fonts-style custom-card-title-display-5">
-                Software Development
+                Responsive Design
               </h4>
               <p class="custom-text custom-fonts-style display-7">
                 Utilize break-through technologies and techniques to design
-                webistes that look good on any device, using HTML5, JavaScript,
-                jQuery, jQueryUI, CSS3, and Bootstrap
+                websites that look good on any device, using HTML5, JavaScript,
+                jQuery, jQueryUI, CSS3, and Bootstrap.
               </p>
             </div>
 
             <div class="col-md-6 row-item col-lg-4">
               <div class="card-img pb-3 align-left">
-                <i class="bi bi-braces-asterisk" media-simple="true"></i>
+                <i class="bi bi-braces" media-simple="true"></i>
               </div>
               <h4 class="custom-fonts-style custom-card-title-display-5">
                 Software Development
               </h4>
               <p class="custom-text custom-fonts-style display-7">
-                Utilize break-through technologies and techniques to design
-                webistes that look good on any device, using HTML5, JavaScript,
-                jQuery, jQueryUI, CSS3, and Bootstrap
+                Design and develop full-stack applications using .NET Framework,
+                .NET Core, C#.NET, ASP.NET, LINQ, MVC, and EF.
               </p>
             </div>
 
             <div class="col-md-6 row-item col-lg-4">
               <div class="card-img pb-3 align-left">
-                <i class="bi bi-braces-asterisk" media-simple="true"></i>
+                <i class="bi bi-database" media-simple="true"></i>
               </div>
               <h4 class="custom-fonts-style custom-card-title-display-5">
-                Software Development
+                Database Management
               </h4>
               <p class="custom-text custom-fonts-style display-7">
-                Utilize break-through technologies and techniques to design
-                webistes that look good on any device, using HTML5, JavaScript,
-                jQuery, jQueryUI, CSS3, and Bootstrap
+                Streamlined development for managing your back-end, using
+                ADO.Net, SQL, SQL Server, and SSMS.
               </p>
             </div>
           </div>
