--- a/links.html
+++ b/links.html
@@ -7,8 +7,8 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/img/Icons/LK_BrandingSuite-07.png" rel="icon">
+  <link href="assets/img/Icons/LK_BrandingSuite-07.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -47,18 +47,17 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="resume.html">Resume</a></li>
-          <li><a class="active" href="links.html">Links</a></li>
           <li><a href="portfolio.html">Portfolio</a></li>
+          <li><a class="active" href="links.html">Links</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
 
       <div class="header-social-links">
-        <a href="#" class="twitter"><i class="bi bi-house-fill"></i></a>
-        <a href="#" class="facebook"><i class="bi bi-lamp"></i></a>
-        <a href="#" class="instagram"><i class="bi bi-tencent-qq"></i></a>
-        <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></i></a>
+        <a href="https://www.lucasjkelley.com" class="website"><i class="bi bi-house-fill"></i></a>
+        <a href="#" class="github"><i class="bi bi-github"></i></a>
+        <a href="https://www.linkedin.com/in/lucasjkelley/" class="linkedin"><i class="bi bi-linkedin"></i></a>
       </div>
 
     </div>
@@ -100,7 +99,9 @@
                 <hr>
                 <h4 class="card-title text-center">Tanner Hulett</h4>
                 <hr>
-                <a href="#" target="_blank" class="btn btn-success">Website</a>
+                <a href="https://tannerhulett.com" target="_blank" class="btn btn-success">Website</a>
+                <a href="https://github.com/tannerhulett" class="github"><i class="bi bi-github"></i></a>
+                <a href="https://www.linkedin.com/in/tanner-hulett-4a8555264/" target="_blank" class="linkedin"><i class="bi bi-linkedin"></i></a>
               </div>
             </div>
           </div>
@@ -124,9 +125,9 @@
                 <hr>
                 <h4 class="card-title text-center">Efrain Santiago</h4>
                 <hr>
-                <a href="#" target="_blank" class="btn btn-success">Website</a>
-                <a href="#" target="_blank" class="github"><i class="bi bi-github"></i></a>
-                <a href="#" target="_blank" class="linkedin"><i class="bi bi-linkedin"></i></a>
+                <a href="https://www.SantiagoEfrain.com" target="_blank" class="btn btn-success">Website</a>
+                <a href="https://github.com/SantiagoEfrain" target="_blank" class="github"><i class="bi bi-github"></i></a>
+                <a href="https://www.linkedin.com/in/efrain-santiago-b373a0268/" target="_blank" class="linkedin"><i class="bi bi-linkedin"></i></a>
               </div>
             </div>
           </div>
@@ -173,14 +174,14 @@
           </div>
           <div class="col">
             <div class="card bg-dark">
-              <img src="#" class="card-img-top" alt="Kellan Campbell">
+              <img src="/assets/img/links photos/Kellan Campbell.jpeg" class="card-img-top" alt="Kellan Campbell">
               <div class="card-body text-light">
                 <hr>
                 <h4 class="card-title text-center">Kellan Campbell</h4>
                 <hr>
-                <a href="#" target="_blank" class="btn btn-success">Website</a>
+                <a href="https://www.kellancampbell.com/" target="_blank" class="btn btn-success">Website</a>
                 <a href="#" target="_blank" class="github"><i class="bi bi-github"></i></a>
-                <a href="#" target="_blank" class="linkedin"><i class="bi bi-linkedin"></i></a>
+                <a href="https://www.linkedin.com/in/kellan-campbell-084227267/" target="_blank" class="linkedin"><i class="bi bi-linkedin"></i></a>
               </div>
             </div>
           </div>
