udpated links and final touches

--- a/links.html
+++ b/links.html
@@ -94,7 +94,7 @@
           </div>
           <div class="col">
             <div class="card bg-dark">
-              <img src="/assets/img/Links Photos/Tanner Hulett.jpg" class="card-img-top" alt="Tanner Hulett">
+              <img src="/assets/img/Links Photos/Tanner_Hulett.png" class="card-img-top" alt="Tanner Hulett">
               <div class="card-body text-light">
                 <hr>
                 <h4 class="card-title text-center">Tanner Hulett</h4>
@@ -107,7 +107,7 @@
           </div>
           <div class="col">
             <div class="card bg-dark">
-              <img src="/assets/img/Links Photos/Brodi Shrout.jpg" class="card-img-top" alt="Brodi Shrout">
+              <img src="/assets/img/Links Photos/B_Shrout.png" class="card-img-top" alt="Brodi Shrout">
               <div class="card-body text-light">
                 <hr>
                 <h4 class="card-title text-center">Brodi Shrout</h4>
@@ -120,7 +120,7 @@
           </div>
           <div class="col">
             <div class="card bg-dark">
-              <img src="/assets/img/Links Photos/Efrain Santiago.jpg" class="card-img-top" alt="Efrain Santiago">
+              <img src="/assets/img/Links Photos/Efrain_Santiago.png" class="card-img-top" alt="Efrain Santiago">
               <div class="card-body text-light">
                 <hr>
                 <h4 class="card-title text-center">Efrain Santiago</h4>
@@ -135,25 +135,25 @@
         <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 g-4 justify-content-center mb-4">
           <div class="col">
             <div class="card bg-dark">
-              <img src="/assets/img/Links Photos/Jared Alcala.png" class="card-img-top" alt="Jared Alcala">
+              <img src="/assets/img/Links Photos/Jared_Alcala.png" class="card-img-top" alt="Jared Alcala">
               <div class="card-body text-light">
                 <hr>
                 <h4 class="card-title text-center">Jared Alcala</h4>
                 <hr>
-                <a href="#" target="_blank" class="btn btn-success">Website</a>
-                <a href="#" target="_blank" class="github"><i class="bi bi-github"></i></a>
-                <a href="#" target="_blank" class="linkedin"><i class="bi bi-linkedin"></i></a>
+                <a href="jaredalcala.com" target="_blank" class="btn btn-success">Website</a>
+                <a href="https://github.com/JaredAlcala" target="_blank" class="github"><i class="bi bi-github"></i></a>
+                <a href="https://www.linkedin.com/in/jared-alcala-667806260/" target="_blank" class="linkedin"><i class="bi bi-linkedin"></i></a>
               </div>
             </div>
           </div>
           <div class="col">
             <div class="card bg-dark">
-              <img src="/assets/img/Links Photos/Steve Rogers.jpg" class="card-img-top" alt="Steve Rogers">
+              <img src="/assets/img/Links Photos/Steve_Rogers.png" class="card-img-top" alt="Steve Rogers">
               <div class="card-body text-light">
                 <hr>
                 <h4 class="card-title text-center">Steve Rogers</h4>
                 <hr>
-                <a href="#" target="_blank" class="btn btn-success">Website</a>
+                <a href="https://sdrogers.net" target="_blank" class="btn btn-success">Website</a>
                 <a href="https://github.com/SteveRogers1215" target="_blank" class="github"><i class="bi bi-github"></i></a>
                 <a href="https://www.linkedin.com/in/steve-rogers-b2427679/" target="_blank" class="linkedin"><i class="bi bi-linkedin"></i></a>
               </div>
@@ -161,20 +161,20 @@
           </div>
           <div class="col">
             <div class="card bg-dark">
-              <img src="/assets/img/Links Photos/Will March.jpeg" class="card-img-top" alt="Will March">
+              <img src="/assets/img/Links Photos/Will_March.png" class="card-img-top" alt="Will March">
               <div class="card-body text-light">
                 <hr>
                 <h4 class="card-title text-center">Will March</h4>
                 <hr>
                 <a href="https://willmarch.net" target="_blank" class="btn btn-success">Website</a>
-                <a href="#" target="_blank" class="github"><i class="bi bi-github"></i></a>
+                <a href="https://github.com/willmarch1" target="_blank" class="github"><i class="bi bi-github"></i></a>
                 <a href="www.linkedin.com/in/willmarch" target="_blank" class="linkedin"><i class="bi bi-linkedin"></i></a>
               </div>
             </div>
           </div>
           <div class="col">
             <div class="card bg-dark">
-              <img src="/assets/img/links photos/Kellan Campbell.jpeg" class="card-img-top" alt="Kellan Campbell">
+              <img src="/assets/img/links photos/Kellan_Campbell.png" class="card-img-top" alt="Kellan Campbell">
               <div class="card-body text-light">
                 <hr>
                 <h4 class="card-title text-center">Kellan Campbell</h4>
