updated links and removed bloat

--- a/links.html
+++ b/links.html
@@ -11,7 +11,7 @@
   <link href="assets/img/Icons/LK_BrandingSuite-07.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+  <link href="http://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
@@ -26,9 +26,9 @@
 
   <!-- =======================================================
   * Template Name: Kelly - v4.10.0
-  * Template URL: https://bootstrapmade.com/kelly-free-bootstrap-cv-resume-html-template/
+  * Template URL: http://bootstrapmade.com/kelly-free-bootstrap-cv-resume-html-template/
   * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
+  * License: http://bootstrapmade.com/license/
   ======================================================== -->
 </head>
 
@@ -55,9 +55,9 @@
       </nav><!-- .navbar -->
 
       <div class="header-social-links">
-        <a href="https://www.lucasjkelley.com" class="website"><i class="bi bi-house-fill"></i></a>
+        <a href="http://www.lucasjkelley.com" class="website"><i class="bi bi-house-fill"></i></a>
         <a href="#" class="github"><i class="bi bi-github"></i></a>
-        <a href="https://www.linkedin.com/in/lucasjkelley/" class="linkedin"><i class="bi bi-linkedin"></i></a>
+        <a href="http://www.linkedin.com/in/lucasjkelley/" class="linkedin"><i class="bi bi-linkedin"></i></a>
       </div>
 
     </div>
@@ -86,9 +86,9 @@
                 <hr>
                 <h4 class="card-title text-center">Jason Pinkston</h4>
                 <hr>
-                <a href="https://jpinkston.com" target="_blank" class="btn btn-success">Website</a>
-                <a href="https://github.com/jpinky82" target="_blank" class="github"><i class="bi bi-github"></i></a>
-                <a href="https://www.linkedin.com/in/jason-pinkston-48224243/" target="_blank" class="linkedin"><i class="bi bi-linkedin"></i></a>
+                <a href="http://jpinkston.com" target="_blank" class="btn btn-success">Website</a>
+                <a href="http://github.com/jpinky82" target="_blank" class="github"><i class="bi bi-github"></i></a>
+                <a href="http://www.linkedin.com/in/jason-pinkston-48224243/" target="_blank" class="linkedin"><i class="bi bi-linkedin"></i></a>
               </div>
             </div>
           </div>
@@ -99,9 +99,9 @@
                 <hr>
                 <h4 class="card-title text-center">Tanner Hulett</h4>
                 <hr>
-                <a href="https://tannerhulett.com" target="_blank" class="btn btn-success">Website</a>
-                <a href="https://github.com/tannerhulett" class="github"><i class="bi bi-github"></i></a>
-                <a href="https://www.linkedin.com/in/tanner-hulett-4a8555264/" target="_blank" class="linkedin"><i class="bi bi-linkedin"></i></a>
+                <a href="http://tannerhulett.com" target="_blank" class="btn btn-success">Website</a>
+                <a href="http://github.com/tannerhulett" class="github"><i class="bi bi-github"></i></a>
+                <a href="http://www.linkedin.com/in/tanner-hulett-4a8555264/" target="_blank" class="linkedin"><i class="bi bi-linkedin"></i></a>
               </div>
             </div>
           </div>
@@ -113,8 +113,8 @@
                 <h4 class="card-title text-center">Brodi Shrout</h4>
                 <hr>
                 <a href="http://www.brodishrout.com/" target="_blank" class="btn btn-success">Website</a>
-                <a href="https://github.com/BrodiShrout" target="_blank" class="github"><i class="bi bi-github"></i></a>
-                <a href="https://www.linkedin.com/in/brodi-shrout-8223a8266/" target="_blank" class="linkedin"><i class="bi bi-linkedin"></i></a>
+                <a href="http://github.com/BrodiShrout" target="_blank" class="github"><i class="bi bi-github"></i></a>
+                <a href="http://www.linkedin.com/in/brodi-shrout-8223a8266/" target="_blank" class="linkedin"><i class="bi bi-linkedin"></i></a>
               </div>
             </div>
           </div>
@@ -125,9 +125,9 @@
                 <hr>
                 <h4 class="card-title text-center">Efrain Santiago</h4>
                 <hr>
-                <a href="https://www.SantiagoEfrain.com" target="_blank" class="btn btn-success">Website</a>
-                <a href="https://github.com/SantiagoEfrain" target="_blank" class="github"><i class="bi bi-github"></i></a>
-                <a href="https://www.linkedin.com/in/efrain-santiago-b373a0268/" target="_blank" class="linkedin"><i class="bi bi-linkedin"></i></a>
+                <a href="http://www.SantiagoEfrain.com" target="_blank" class="btn btn-success">Website</a>
+                <a href="http://github.com/SantiagoEfrain" target="_blank" class="github"><i class="bi bi-github"></i></a>
+                <a href="http://www.linkedin.com/in/efrain-santiago-b373a0268/" target="_blank" class="linkedin"><i class="bi bi-linkedin"></i></a>
               </div>
             </div>
           </div>
@@ -141,8 +141,8 @@
                 <h4 class="card-title text-center">Jared Alcala</h4>
                 <hr>
                 <a href="jaredalcala.com" target="_blank" class="btn btn-success">Website</a>
-                <a href="https://github.com/JaredAlcala" target="_blank" class="github"><i class="bi bi-github"></i></a>
-                <a href="https://www.linkedin.com/in/jared-alcala-667806260/" target="_blank" class="linkedin"><i class="bi bi-linkedin"></i></a>
+                <a href="http://github.com/JaredAlcala" target="_blank" class="github"><i class="bi bi-github"></i></a>
+                <a href="http://www.linkedin.com/in/jared-alcala-667806260/" target="_blank" class="linkedin"><i class="bi bi-linkedin"></i></a>
               </div>
             </div>
           </div>
@@ -153,9 +153,9 @@
                 <hr>
                 <h4 class="card-title text-center">Steve Rogers</h4>
                 <hr>
-                <a href="https://sdrogers.net" target="_blank" class="btn btn-success">Website</a>
-                <a href="https://github.com/SteveRogers1215" target="_blank" class="github"><i class="bi bi-github"></i></a>
-                <a href="https://www.linkedin.com/in/steve-rogers-b2427679/" target="_blank" class="linkedin"><i class="bi bi-linkedin"></i></a>
+                <a href="http://sdrogers.net" target="_blank" class="btn btn-success">Website</a>
+                <a href="http://github.com/SteveRogers1215" target="_blank" class="github"><i class="bi bi-github"></i></a>
+                <a href="http://www.linkedin.com/in/steve-rogers-b2427679/" target="_blank" class="linkedin"><i class="bi bi-linkedin"></i></a>
               </div>
             </div>
           </div>
@@ -166,8 +166,8 @@
                 <hr>
                 <h4 class="card-title text-center">Will March</h4>
                 <hr>
-                <a href="https://willmarch.net" target="_blank" class="btn btn-success">Website</a>
-                <a href="https://github.com/willmarch1" target="_blank" class="github"><i class="bi bi-github"></i></a>
+                <a href="http://willmarch.net" target="_blank" class="btn btn-success">Website</a>
+                <a href="http://github.com/willmarch1" target="_blank" class="github"><i class="bi bi-github"></i></a>
                 <a href="www.linkedin.com/in/willmarch" target="_blank" class="linkedin"><i class="bi bi-linkedin"></i></a>
               </div>
             </div>
@@ -179,9 +179,9 @@
                 <hr>
                 <h4 class="card-title text-center">Kellan Campbell</h4>
                 <hr>
-                <a href="https://www.kellancampbell.com/" target="_blank" class="btn btn-success">Website</a>
+                <a href="http://www.kellancampbell.com/" target="_blank" class="btn btn-success">Website</a>
                 <a href="#" target="_blank" class="github"><i class="bi bi-github"></i></a>
-                <a href="https://www.linkedin.com/in/kellan-campbell-084227267/" target="_blank" class="linkedin"><i class="bi bi-linkedin"></i></a>
+                <a href="http://www.linkedin.com/in/kellan-campbell-084227267/" target="_blank" class="linkedin"><i class="bi bi-linkedin"></i></a>
               </div>
             </div>
           </div>
@@ -201,9 +201,9 @@
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
         <!-- You can delete the links only if you purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/kelly-free-bootstrap-cv-resume-html-template/ -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        <!-- Licensing information: http://bootstrapmade.com/license/ -->
+        <!-- Purchase the pro version with working PHP/AJAX contact form: http://bootstrapmade.com/kelly-free-bootstrap-cv-resume-html-template/ -->
+        Designed by <a href="http://bootstrapmade.com/">BootstrapMade</a>
       </div>
     </div>
   </footer><!-- End  Footer -->
