--- a/about.html
+++ b/about.html
@@ -98,7 +98,7 @@
 
           <div class="row">
             <div class="col-lg-4">
-              <img src="assets/img/head-shot" class="img-fluid" alt="" />
+              <img src="/assets/img/head-shot.jpg" class="img-fluid" alt="" />
             </div>
             <div class="col-lg-8 pt-4 pt-lg-0 content">
               <h3>Developer &amp; Software Engineer</h3>
