--- a/portfolio.html
+++ b/portfolio.html
@@ -95,7 +95,7 @@
             <h2>Portfolio</h2>
             <p>Hover and select a project below to see more information</p>
             <br />
-            <h5>!! These projects are coming soon !!</h5>
+            
           </div>
 
           <div class="row" data-aos="fade-up" data-aos-delay="100">
@@ -119,10 +119,10 @@
                   <p>Console App</p>
                   <div class="portfolio-links">
                     <a
-                      href="assets/img/portfolio/portfolio-1.jpg"
+                      href="assets/img/portfolio/dungeon.jpg"
                       data-gallery="portfolioGallery"
                       class="portfolio-lightbox"
-                      title="App 1"
+                      title="Console App"
                       ><i class="bx bx-plus"></i
                     ></a>
                     <a
@@ -152,11 +152,11 @@
                       href="assets/img/portfolio/StoreFront.jpg"
                       data-gallery="portfolioGallery"
                       class="portfolio-lightbox"
-                      title="Web 3"
+                      title="Web Application"
                       ><i class="bx bx-plus"></i
                     ></a>
                     <a
-                      href="portfolio-details.html"
+                      href="portfolio-details2.html"
                       class="portfolio-details-lightbox"
                       data-glightbox="type: external"
                       title="Portfolio Details"
@@ -176,17 +176,17 @@
                 />
                 <div class="portfolio-info">
                   <h4>ToDo API</h4>
-                  <p>App</p>
+                  <p>Web API</p>
                   <div class="portfolio-links">
                     <a
                       href="assets/img/portfolio/API.jpg"
                       data-gallery="portfolioGallery"
                       class="portfolio-lightbox"
-                      title="App 2"
+                      title="Web API"
                       ><i class="bx bx-plus"></i
                     ></a>
                     <a
-                      href="portfolio-details.html"
+                      href="portfolio-details3.html"
                       class="portfolio-details-lightbox"
                       data-glightbox="type: external"
                       title="Portfolio Details"
@@ -206,17 +206,17 @@
                 />
                 <div class="portfolio-info">
                   <h4>React ToDo</h4>
-                  <p>Card</p>
+                  <p>React js</p>
                   <div class="portfolio-links">
                     <a
                       href="assets/img/portfolio/react.jpg"
                       data-gallery="portfolioGallery"
                       class="portfolio-lightbox"
-                      title="Card 2"
+                      title="React"
                       ><i class="bx bx-plus"></i
                     ></a>
                     <a
-                      href="portfolio-details.html"
+                      href="portfolio-details4.html"
                       class="portfolio-details-lightbox"
                       data-glightbox="type: external"
                       title="Portfolio Details"
@@ -242,11 +242,11 @@
                       href="assets/img/portfolio/SAT.jpg"
                       data-gallery="portfolioGallery"
                       class="portfolio-lightbox"
-                      title="Web 2"
+                      title="SAT"
                       ><i class="bx bx-plus"></i
                     ></a>
                     <a
-                      href="portfolio-details.html"
+                      href="portfolio-details5.html"
                       class="portfolio-details-lightbox"
                       data-glightbox="type: external"
                       title="Portfolio Details"
