--- a/links.html
+++ b/links.html
@@ -140,7 +140,7 @@
                 <hr>
                 <h4 class="card-title text-center">Jared Alcala</h4>
                 <hr>
-                <a href="jaredalcala.com" target="_blank" class="btn btn-success">Website</a>
+                <a href="http://jaredalcala.com" target="_blank" class="btn btn-success">Website</a>
                 <a href="http://github.com/JaredAlcala" target="_blank" class="github"><i class="bi bi-github"></i></a>
                 <a href="http://www.linkedin.com/in/jared-alcala-667806260/" target="_blank" class="linkedin"><i class="bi bi-linkedin"></i></a>
               </div>
@@ -168,7 +168,7 @@
                 <hr>
                 <a href="http://willmarch.net" target="_blank" class="btn btn-success">Website</a>
                 <a href="http://github.com/willmarch1" target="_blank" class="github"><i class="bi bi-github"></i></a>
-                <a href="www.linkedin.com/in/willmarch" target="_blank" class="linkedin"><i class="bi bi-linkedin"></i></a>
+                <a href="http://www.linkedin.com/in/willmarch" target="_blank" class="linkedin"><i class="bi bi-linkedin"></i></a>
               </div>
             </div>
           </div>
