updated links and header icon size

--- a/index.html
+++ b/index.html
@@ -75,13 +75,9 @@
         <!-- .navbar -->
 
         <div class="header-social-links">
-          <a href="https://www.lucasjkelley.com" class="website"
-            ><i class="bi bi-house-fill"></i
-          ></a>
-          <a href="#" class="github"><i class="bi bi-github"></i></a>
-          <a href="https://www.linkedin.com/in/lucasjkelley/" class="linkedin"
-            ><i class="bi bi-linkedin"></i
-          ></a>
+          <a href="https://www.lucasjkelley.com" class="website"><i class="bi bi-house-fill"></i></a>
+          <a href="https://github.com/lucasjkelley" class="github"><i class="bi bi-github"></i></a>
+          <a href="https://www.linkedin.com/in/lucasjkelley/" class="linkedin"><i class="bi bi-linkedin"></i></a>
         </div>
       </div>
     </header>
