--- a/links.html
+++ b/links.html
@@ -56,7 +56,7 @@
 
       <div class="header-social-links">
         <a href="http://www.lucasjkelley.com" class="website"><i class="bi bi-house-fill"></i></a>
-        <a href="#" class="github"><i class="bi bi-github"></i></a>
+        <a href="https://github.com/lucasjkelley" class="github"><i class="bi bi-github"></i></a>
         <a href="http://www.linkedin.com/in/lucasjkelley/" class="linkedin"><i class="bi bi-linkedin"></i></a>
       </div>
 
