--- a/portfolio.html
+++ b/portfolio.html
@@ -78,7 +78,7 @@
           <a href="https://www.lucasjkelley.com" class="website"
             ><i class="bi bi-house-fill"></i
           ></a>
-          <a href="#" class="github"><i class="bi bi-github"></i></a>
+          <a href="https://github.com/lucasjkelley" class="github"><i class="bi bi-github"></i></a>
           <a href="https://www.linkedin.com/in/lucasjkelley/" class="linkedin"
             ><i class="bi bi-linkedin"></i
           ></a>
